# Lab9_1

./: CMakeLists.txt
src/: dod.cpp  dod.h  functions.cpp  main.cpp  sum.cpp  sum.h  var.cpp  var.h
tests/: testfile.cpp
